imported wordpress posts

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: I like toast a lot
 ---
 
 <div id="home">
+	yeah is this gonna work?
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
