added social links

--- a/_posts/2013-01-30-building-scalable-realtime-services-with-node-js-socket-io-and-windows-azure.html
+++ b/_posts/2013-01-30-building-scalable-realtime-services-with-node-js-socket-io-and-windows-azure.html
@@ -15,18 +15,18 @@ type: post
 published: true
 featuredImage: "/images/2013/01/waz-blog3.png"
 excerpt: >
-    <a href="http://wazstagram.cloudapp.net/">Wazstagram</a> is a fun experiment with node.js on <a href="http://www.windowsazure.com/en-us/develop/nodejs/">Windows Azure</a> and the <a href="http://instagram.com/developer/realtime/">Instagram Realtime API</a>.  The project uses various services in Windows Azure to create a scalable window into Instagram traffic across multiple cities.  The application is written in node.js, using cloud services in Windows Azure.  A scalable set of backend nodes receive messages from the Instagram Realtime API.  Those messages are sent to the front end nodes using <a href="http://msdn.microsoft.com/en-us/library/hh690929.aspx">Windows Azure Service Bus</a>.  The front end nodes are running node.js with <a href="http://expressjs.com/">express</a> and <a href="http://socket.io/">socket.io</a>. 
+    <a href="http://wazstagram.azurewebsites.net/">Wazstagram</a> is a fun experiment with node.js on <a href="http://www.windowsazure.com/en-us/develop/nodejs/">Windows Azure</a> and the <a href="http://instagram.com/developer/realtime/">Instagram Realtime API</a>.  The project uses various services in Windows Azure to create a scalable window into Instagram traffic across multiple cities.  The application is written in node.js, using cloud services in Windows Azure.  A scalable set of backend nodes receive messages from the Instagram Realtime API.  Those messages are sent to the front end nodes using <a href="http://msdn.microsoft.com/en-us/library/hh690929.aspx">Windows Azure Service Bus</a>.  The front end nodes are running node.js with <a href="http://expressjs.com/">express</a> and <a href="http://socket.io/">socket.io</a>. 
 ---
 
 
-<p><a href="http://wazstagram.cloudapp.net/"><img alt="WAZSTAGRAM" src="/images/2013/01/waz-screenshot.png" title="View the Demo"/></a>
+<p><a href="http://wazstagram.azurewebsites.net/"><img alt="WAZSTAGRAM" src="/images/2013/01/waz-screenshot.png" title="View the Demo"/></a>
 </p>
 
-<p><a href="http://wazstagram.cloudapp.net/">Wazstagram</a> is a fun experiment with node.js on <a href="http://www.windowsazure.com/en-us/develop/nodejs/">Windows Azure</a> and the <a href="http://instagram.com/developer/realtime/">Instagram Realtime API</a>.  The project uses various services in Windows Azure to create a scalable window into Instagram traffic across multiple cities.
+<p><a href="http://wazstagram.azurewebsites.net/">Wazstagram</a> is a fun experiment with node.js on <a href="http://www.windowsazure.com/en-us/develop/nodejs/">Windows Azure</a> and the <a href="http://instagram.com/developer/realtime/">Instagram Realtime API</a>.  The project uses various services in Windows Azure to create a scalable window into Instagram traffic across multiple cities.
 </p>
 
 <ul>
-<li><a href="http://wazstagram.cloudapp.net/">View the demo on Windows Azure</a></li>
+<li><a href="http://wazstagram.azurewebsites.net/">View the demo on Windows Azure</a></li>
 <li><a href="https://github.com/JustinBeckwith/wazstagram/">View the code on GitHub</a></li>
 </ul>
 
