--- a/about.html
+++ b/about.html
@@ -28,16 +28,38 @@ permalink: /about/
 
 	<h3>Publications</h3>
 	<ul>
-	<li>Cois, C. A., Beckwith, J., Wrubel, J., Herrman, J., VTE: The Virtual Training Environment - Advanced Virtual Lab Authoring and Delivery. Proceedings of the 2nd International Conference on Computer Supported Education (CSEDU), Valencia, Spain, April 2010, Volume 1 pp. 208-214.</li>
+	<tr><td>Cois, C. A., Beckwith, J., Wrubel, J., Herrman, J., VTE: The Virtual Training Environment - Advanced Virtual Lab Authoring and Delivery. Proceedings of the 2nd International Conference on Computer Supported Education (CSEDU), Valencia, Spain, April 2010, Volume 1 pp. 208-214.</td></tr>
 	</ul>
 
 	<h3>Speaking</h3>
-	<ul>
-		<li>QCon NYC 2013 => <a href="https://qconnewyork.com/node/222">Continuous Delivery with Windows Azure</a></li>
-		<li>AngleBrackets 2013 => <a href="http://lanyrd.com/2013/anglebrackets/">WebMatrix 3 - Code Editor for the Cloud</a></li>
-		<li>Microsoft Build 2012=> <a href="http://channel9.msdn.com/Events/Build/2012/4-002">Continuous Integration with Windows Azure Websites</a></li>
-		<li>Channel 9 => <a href="http://channel9.msdn.com/Shows/Web+Camps+TV/Coding-Nodejs-in-WebMatrix-2">Coding Node.js in WebMatrix 2</a></li>
-		<li>Channel 9 => <a href="http://channel9.msdn.com/Shows/Web+Camps+TV/WebcampsTV-Justin-and-Vishal-Build-an-Image-sharing-Site-with-Windows-Azure-Web-Sites">Justin and Vishal Build an Image-sharing Site with Windows Azure Web Sites</a></li>
-		<li>Streaming Media East 2009 => <a href="http://www.streamingmedia.com/conferences/East2009/speakers.aspx?speaker=JustinBeckwith">Making Effective Online Video for Education</a></li>
-	</ul>
+	<table class="table table-hover">
+		<tr>
+			<td>QCon NYC 2013</td>
+			<td><a href="https://qconnewyork.com/node/222">Continuous Delivery with Windows Azure</a></td>
+		</tr>
+		<tr>
+			<td>AngleBrackets 2013</td>
+			<td><a href="http://lanyrd.com/2013/anglebrackets/">WebMatrix 3 - Code Editor for the Cloud</a></td>
+		</tr>
+		<tr>
+			<td>Microsoft Build 2012</td>
+			<td><a href="http://channel9.msdn.com/Events/Build/2012/4-002">Continuous Integration with Windows Azure Websites</a></td>
+		</tr>
+		<tr>
+			<td>WordCamp NYC 2012</td>
+			<td><a href="http://2012.nyc.wordcamp.org/">WebMatrix 2: Uber geek in designer clothes</a></td>
+		</tr>
+		<tr>
+			<td>Channel 9</td>
+			<td><a href="http://channel9.msdn.com/Shows/Web+Camps+TV/Coding-Nodejs-in-WebMatrix-2">Coding Node.js in WebMatrix 2</a></td>
+		</tr>
+		<tr>
+			<td>Channel 9</td>
+			<td><a href="http://channel9.msdn.com/Shows/Web+Camps+TV/WebcampsTV-Justin-and-Vishal-Build-an-Image-sharing-Site-with-Windows-Azure-Web-Sites">Justin and Vishal Build an Image-sharing Site with Windows Azure Web Sites</a></td>
+		</tr>
+		<tr>
+			<td>Streaming Media East 2009</td>
+			<td><a href="http://www.streamingmedia.com/conferences/East2009/speakers.aspx?speaker=JustinBeckwith">Making Effective Online Video for Education</a></td>
+		</tr>
+	</table>
 </div>
