update post excerpt

--- a/_posts/2013-07-17-wordpress-to-jekyll.html
+++ b/_posts/2013-07-17-wordpress-to-jekyll.html
@@ -11,7 +11,7 @@ type: post
 published: true
 featuredImage: "/images/posts/wordpress-to-jekyll/jekyll.png"
 excerpt: >
-    Over the last few weeks, I've been slowly moving my blog from Wordpress to <a href="http://jekyllrb.com/" target="_blank">Jekyll.</a>  The change has been a long time coming, and so far I couldn't be happier with the results. I thought it may be interesting to make the ultimate meta post, and write a blog post about my blog. You can take a look at the <a href="https://github.com/JustinBeckwith/justinbeckwith.github.io" target="_blank">source code on GitHub</a>.
+    Over the last few weeks, I've been slowly moving my blog from Wordpress to <a href="http://jekyllrb.com/" target="_blank">Jekyll.</a>  The change has been a long time coming, and so far I couldn't be happier with the results. I thought it may be interesting to make the ultimate meta post, and write a blog post about my blog. You can take a look at the <a href="https://github.com/JustinBeckwith/justinbeckwith.github.io" target="_blank">source code on GitHub</a>. Jekyll takes a bit of a different approach to serving up a blog. Instead of the traditional model of hosting an active web application with PHP/Ruby/.NET/whatever and a database, you simply post static pages. 
 ---
 
 <img src="/images/posts/wordpress-to-jekyll/jekyll.png" alt="jekyll is fun" />
