added how the azure portal works post

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ permalink: /about/
 	<table class="table table-hover">
 		<tr>
 			<td>QCon NYC 2013</td>
-			<td><a href="https://qconnewyork.com/node/222">Continuous Delivery with Windows Azure</a></td>
+			<td><a href="http://www.infoq.com/presentations/continuous-delivery-azure">Continuous Delivery with Windows Azure</a></td>
 		</tr>
 		<tr>
 			<td>AngleBrackets 2013</td>
