added oredev posts

--- a/about.html
+++ b/about.html
@@ -33,6 +33,14 @@ permalink: /about/
 
 	<h3>Speaking</h3>
 	<table class="table table-hover">
+	  <tr>
+			<td>Øredev 2014</td>
+			<td><a href="http://vimeo.com/111289052">es6: Getting ready for JavaScript vNext</a></td>
+		</tr>
+		<tr>
+			<td>Øredev 2014</td>
+			<td><a href="http://vimeo.com/111004374">Building web applications with ASP.NET vNext</a></td>
+		</tr>
 		<tr>
 			<td>QCon NYC 2013</td>
 			<td><a href="http://www.infoq.com/presentations/continuous-delivery-azure">Continuous Delivery with Windows Azure</a></td>
