fix small width layout

--- a/_posts/2011-04-18-frink.html
+++ b/_posts/2011-04-18-frink.html
@@ -14,13 +14,11 @@ published: true
 excerpt: Frink! is a mobile client for the web site <a href="http://www.reddit.com" target="_blank">Reddit</a>. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World.
 ---
 
-
-
-<img src="/images/2011/04/frink-header1.png" alt="" title="FRINK!" width="430" height="290" />
+<img src="/images/2011/04/frink-header1.png" title="FRINK!" />
 
 Frink! is a mobile client for the web site <a href="http://www.reddit.com" target="_blank">Reddit</a>. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World:
 
-<a href="http://appworld.blackberry.com/webstore/content/38838?lang=en" target="_blank">http://appworld.blackberry.com/webstore/content/38838?lang=en</a>
+<a href="http://appworld.blackberry.com/webstore/content/38838?lang=en" target="_blank">Frink:  Blackberry app world</a>
 
 After the code has a little time to settle, I plan on releasing the app to the Android Market as well.  The entire project is open source, and available on my <a target="_blank" href="https://github.com/JustinBeckwith/frink">GitHub</a>.
 
@@ -54,6 +52,6 @@ Frink! on Twitter: <a target="_blank" href="http://twitter.com/frinkapp">http://
 Frink! on GitHub: <a target="_blank" href="https://github.com/JustinBeckwith/frink">https://github.com/JustinBeckwith/frink</a>
 </li>
 <li>
-Frink! at BlackBerry App World: <a target="_blank" href="http://appworld.blackberry.com/webstore/content/38838?lang=en">http://appworld.blackberry.com/webstore/content/38838</a>
+Frink! at BlackBerry App World: <a target="_blank" href="http://appworld.blackberry.com/webstore/content/38838?lang=en">Frink!</a>
 </li>
 </ul>
