add gcp next talk post

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ permalink: /about/
 <img title="pumpkins" src="/images/2010/08/pumpkins-300x200.jpg" alt="" width="300" height="200">
 
 <p>
-Greetings, my name is Justin Beckwith.  I am a Product Manager at Google, where I help make the cloud.  I used to work at Microsoft, where I also helped make the cloud.  I like to make things.  I'm trying to make it easier to develop applications for the cloud.  Over the years I've solved a lot of interesting problems.  I would like to use this blog to share those answers with others, and hopefully start some interesting discussions.
+Greetings, my name is Justin Beckwith. I am a Product Manager at Google, where I help make the cloud. I used to work at Microsoft, where I also helped make the cloud.  I like to make things. I'm trying to make it easier to develop applications for the cloud.  Over the years I've solved a lot of interesting problems. I would like to use this blog to share those answers with others, and hopefully start some interesting discussions.
 </p>
 
 <h3>Online Profiles</h3>
@@ -31,6 +31,14 @@ Greetings, my name is Justin Beckwith.  I am a Product Manager at Google, where 
 
 <h3>Speaking</h3>
 <table class="table table-hover">
+  <tr>
+    <td>GCP Podcast</td>
+    <td><a href="https://www.gcppodcast.com/post/episode-20-nodejs-with-justin-beckwith/">Node.js with Justin Beckwith</a></td>
+  </tr>
+  <tr>
+    <td>GCP Next 2016</td>
+    <td><a href="https://www.youtube.com/watch?v=jsznS0QxtYI">Building node.js applications on GCP Google Cloud Platform</a></td>
+  </tr>
   <tr>
 		<td>Øredev 2014</td>
 		<td><a href="http://vimeo.com/111289052">es6: Getting ready for JavaScript vNext</a></td>
