add bigquery github post

--- a/about.html
+++ b/about.html
@@ -5,13 +5,15 @@ tags: []
 permalink: /about/
 ---
 
-<img title="pumpkins" src="/images/2010/08/pumpkins-300x200.jpg" alt="" width="300" height="200">
+<img src="/images/jbatns.jpg" alt="It's a me!">
 
+<br>
+<br>
 <p>
-Greetings, my name is Justin Beckwith. I am a Product Manager at Google, where I help make the cloud. I used to work at Microsoft, where I also helped make the cloud.  I like to make things. I'm trying to make it easier to develop applications for the cloud.  Over the years I've solved a lot of interesting problems. I would like to use this blog to share those answers with others, and hopefully start some interesting discussions.
+Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, where I help make the cloud. I used to work at Microsoft, where I also helped make the cloud.  I like to make things.  I'm trying to make it just a little easier to develop applications for the cloud. 
 </p>
 
-<h3>Online Profiles</h3>
+<h3>Find me online</h3>
 <h4>Twitter:</h4>
 <a href="http://twitter.com/justinbeckwith" target="_blank">http://twitter.com/justinbeckwith</a>
 
@@ -24,13 +26,12 @@ Greetings, my name is Justin Beckwith. I am a Product Manager at Google, where I
 <h4>GitHub:</h4>
 <a href="https://github.com/JustinBeckwith/" target="_blank">https://github.com/JustinBeckwith/</a>
 
-<h3>Publications</h3>
-<ul>
-<tr><td>Cois, C. A., Beckwith, J., Wrubel, J., Herrman, J., VTE: The Virtual Training Environment - Advanced Virtual Lab Authoring and Delivery. Proceedings of the 2nd International Conference on Computer Supported Education (CSEDU), Valencia, Spain, April 2010, Volume 1 pp. 208-214.</td></tr>
-</ul>
-
 <h3>Speaking</h3>
 <table class="table table-hover">
+  <tr>
+    <td>SFNode Meetup</td>
+    <td><a href="https://www.youtube.com/watch?v=7DL72amLBq8">Node.js @ Google</a></td>
+  </tr>
   <tr>
     <td>GCP Podcast</td>
     <td><a href="https://www.gcppodcast.com/post/episode-20-nodejs-with-justin-beckwith/">Node.js with Justin Beckwith</a></td>
@@ -76,3 +77,11 @@ Greetings, my name is Justin Beckwith. I am a Product Manager at Google, where I
 		<td><a href="http://www.streamingmedia.com/conferences/East2009/speakers.aspx?speaker=JustinBeckwith">Making Effective Online Video for Education</a></td>
 	</tr>
 </table>
+
+
+<h3>Publications</h3>
+<ul>
+<tr><td>Cois, C. A., Beckwith, J., Wrubel, J., Herrman, J., VTE: The Virtual Training Environment - Advanced Virtual Lab Authoring and Delivery. Proceedings of the 2nd International Conference on Computer Supported Education (CSEDU), Valencia, Spain, April 2010, Volume 1 pp. 208-214.</td></tr>
+</ul>
+
+
