--- a/about.html
+++ b/about.html
@@ -29,6 +29,26 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
 <h3>Speaking</h3>
 <table class="table table-hover">
   <tr>
+    <td>GCP Next 2017</td>
+    <td><a href="https://youtu.be/sATG0OfdP4g">You can do that on App Engine!?</a></td>
+  </tr>
+	<tr>
+    <td>Node.js Interactive 2016</td>
+    <td><a href="https://youtu.be/iqPcG9f3trk">KEYNOTE: Making Magic in the Cloud with Node.js at Google</a></td>
+  </tr>
+	<tr>
+    <td>Øredev 2016</td>
+    <td><a href="https://vimeo.com/191285367">Using BigQuery and the Cloud Vision API to analyze Reddit</a></td>
+  </tr>
+	<tr>
+    <td>Øredev 2016</td>
+    <td><a href="http://oredev.org/2016/sessions/get-microservicey-with-node-js-kubernetes-and-grpc">Get microservicey with Node.js, Kubernetes and gRPC</a></td>
+  </tr>
+	<tr>
+    <td>Node Summit 2016</td>
+    <td><a href="https://vimeo.com/180426390">Making Magic in the Cloud with Node.js at Google</a></td>
+  </tr>
+	<tr>
     <td>SFNode Meetup</td>
     <td><a href="https://www.youtube.com/watch?v=7DL72amLBq8">Node.js @ Google</a></td>
   </tr>
