--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ permalink: /about/
 <br>
 <br>
 <p>
-Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, where I help make the cloud. I used to work at Microsoft, where I also helped make the cloud.  I like to make things.  I'm trying to make it just a little easier to develop applications for the cloud. 
+Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, where I help make the cloud. I used to work at Microsoft, where I also helped make the cloud.  I like to make things.  I'm trying to make it just a little easier to develop applications for the cloud.
 </p>
 
 <h3>Find me online</h3>
@@ -28,6 +28,14 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
 
 <h3>Speaking</h3>
 <table class="table table-hover">
+	<tr>
+		<td>Node.js Interactive 2017</td>
+		<td><a href="https://www.slideshare.net/JustinBeckwith1/keynote-nodejs-interactive-2017-the-case-for-nodejs">KEYNOTE: The case for Node.js</a></td>
+	</tr>
+	<tr>
+		<td>Node Summit 2017</td>
+		<td><a href="https://vimeo.com/230161445">Panel discussion: The future of Node.js</a></td>
+	</tr>
   <tr>
     <td>GCP Next 2017</td>
     <td><a href="https://youtu.be/sATG0OfdP4g">You can do that on App Engine!?</a></td>
