--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ Greetings folks!  I'm Justin Beckwith. I work at Google as a Product Manager, wh
 <table class="table table-hover">
 	<tr>
 		<td>Node.js Interactive 2017</td>
-		<td><a href="https://www.slideshare.net/JustinBeckwith1/keynote-nodejs-interactive-2017-the-case-for-nodejs">KEYNOTE: The case for Node.js</a></td>
+		<td><a href="https://www.youtube.com/watch?v=HwuGwc8paP4&index=46&list=PLfMzBWSH11xa-iNnQG2555lgi4574nZOh">KEYNOTE: The case for Node.js</a></td>
 	</tr>
 	<tr>
 		<td>Node Summit 2017</td>
